--- a/src/app/receipt/create-reciept/create-reciept.component.css
+++ b/src/app/receipt/create-reciept/create-reciept.component.css
@@ -2,18 +2,19 @@
     width: 70%;
 }
 
-.checkBox {
-    position: absolute;
-    right: 25px;
-    top: 25px;
-}
-
-.checkBox input {
-    width: inherit;
-}
-
 #reciboNew {
     position: absolute;
     display: none;
     /* margin: 0; */
+}
+
+.credit {
+    text-align: center !important;
+    font-size: 60px !important;
+}
+
+.credit i {
+    cursor: pointer;
+    font-size: 60px !important;
+    padding: 0 25px;
 }
