--- a/src/app/workers-payment/workers-payment.component.html
+++ b/src/app/workers-payment/workers-payment.component.html
@@ -1,3 +1,5 @@
+<mat-progress-bar mode="indeterminate" *ngIf="sendingData > 0" class="barLoader"></mat-progress-bar>
+
 <h2 class="centerText">Pagos a trabajadores</h2>
 <div class="responsive-table">
     <table align="center">
