--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -27,8 +27,8 @@
     </mat-paginator>
 </div>
 
-<a [routerLink]="['/pago-trabajadores/crear']">
-    <div class="botonFloat" matTooltip="Crear Pagos para los trabajadores">
+<a [routerLink]="['./create']">
+    <div class="botonFloat" matTooltip="Crear Evento">
         <a class="botonA"><i class="material-icons">add</i></a>
     </div>
 </a>
