Improve Show Congroller

--- a/src/app/user/show-user/show-user.component.html
+++ b/src/app/user/show-user/show-user.component.html
@@ -302,7 +302,7 @@
 
                         <div class="formData l6 m6">
                             <label>Tipo de Salario:</label>
-                            <select [(ngModel)]="salary.salary_type_id" name="salary_type_id" disbaled>
+                            <select [(ngModel)]="salary.salary_type_id" name="salary_type_id" disabled>
                                 <option value="1">Hora</option>
                                 <option value="2">Quincena</option>
                             </select>
