Improve view && clases

--- a/src/app/monthly-prices/monthly-price.component.html
+++ b/src/app/monthly-prices/monthly-price.component.html
@@ -45,7 +45,7 @@
         </tbody>
     </table>
 
-    <table *ngIf="credential == 3">
+    <table *ngIf="credential <= 5 && credential >= 1">
         <thead>
             <tr>
 
