--- a/src/app/receipt/receipt.component.html
+++ b/src/app/receipt/receipt.component.html
@@ -30,7 +30,8 @@
 
     <form class="form" (submit)="getReceipts()">
         <input (change)="getReceipts()" type="date" [(ngModel)]="search.from" name="from" id="search"><label><mat-icon>date_range</mat-icon></label>
-        <input *ngIf="storage.getUserType() >= 6" (change)="getReceipts()" type="date" [(ngModel)]="search.to" name="to" id="search"><label *ngIf="storage.getUserType() >= 6"><mat-icon>date_range</mat-icon></label>
+        <input (change)="getReceipts()" type="date" [(ngModel)]="search.to" name="to" id="search" *ngIf="storage.getUserType() >= 6"><label *ngIf="storage.getUserType() >= 6">
+            <mat-icon>date_range</mat-icon></label>
 
         <input [(ngModel)]="search.name" [matAutocomplete]="auto" name="name" id="search" type="search" placeholder="Buscar Usuario" (keyup)="searchInput($event)"><label><mat-icon>search</mat-icon></label>
 
@@ -51,6 +52,7 @@
                 <tr>
                     <!-- <th class="left">id</th> -->
                     <th>Alumno</th>
+                    <th>Creador</th>
                     <th>Fecha</th>
                     <th>Monto</th>
                     <th>Tipo</th>
@@ -59,7 +61,8 @@
             </thead>
             <tbody *ngIf="storage.getUserType() >= 6">
                 <tr *ngFor="let re of receipts" [routerLink]="['/receipt/edit', re.id]">
-                    <td class="left">{{ re.user_name }}</td>
+                    <td class="left">{{ re.user.name }}</td>
+                    <td class="left">{{ re.creator.name }}</td>
                     <td>{{ re.created_at }}</td>
                     <td>$ {{ re.amount }}</td>
                     <td *ngIf="re.type == 1">Mensualidad</td>
