--- a/src/app/schedules/schedules.component.html
+++ b/src/app/schedules/schedules.component.html
@@ -1,7 +1,15 @@
 <div id="reciboNew">
 
 
+
+
     <h2 class="centerText" (click)="sortDataOrder()">Horarios</h2>
+
+    <a class="linkExcel" href="{{ storage.getUrl() + 'excel/schedules' + storage.getTokenUrl() }}
+    &type={{ filter }}">
+        <p>Exportar a Excel</p>
+        <img src="http://icons.iconarchive.com/icons/graphicloads/filetype/256/excel-xls-icon.png">
+    </a>
 
     <div class="flexform">
         <div>
