filter user export excel

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,6 +2,10 @@
 
 <h2 class="centerText">Usuarios</h2>
 
+<a class="linkExcel" [routerLink]="['/filter']">
+        <p>Exportar a Excel</p>
+        <img src="http://icons.iconarchive.com/icons/graphicloads/filetype/256/excel-xls-icon.png">
+    </a>
 
 
 <div class="divSearch">
