--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -5,3 +5,20 @@
 .status3 {
     background: grey
 }
+
+.linkExcel {
+    top: 40px;
+    right: 20px;
+    display: flex;
+}
+
+.linkExcel p {
+    display: block;
+    position: relative;
+    margin-top: -5px;
+}
+
+.linkExcel img {
+    height: 20px;
+    margin-left: 20px;
+}
